welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: Missing closing brace `}' assumed here
for(nbPas<- 0 to 6) {
^Program:11: error: ')' expected but '}' found.
	}
        ^